--- a/src/style.css
+++ b/src/style.css
@@ -1,103 +1,103 @@
 @import url(//db.onlinewebfonts.com/c/002b944b211d383987536f1ecf684bca?family=Herculanum);
 
 img {
-
-    background-size: cover;
-        background-position: center;
-        width: 92%;
-        height: 80%;
-        margin-top: 3%;
-        border-radius: 5px;
-        border: 1.5px darkkhaki double;
+  background-size: cover;
+  background-position: center;
+  width: 92%;
+  height: 80%;
+  margin-top: 3%;
+  border-radius: 5px;
+  border: 1.5px darkkhaki double;
 }
 
 .imageGallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 5%;
 }
 
 .score {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: 3%;
-    margin-top: 2%;
-    font-size: large;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: 3%;
+  margin-top: 2%;
+  font-size: large;
 }
 
 .card {
-    border: 3px darkkhaki double;
-    background-color: #026e6870;
-    width: 275px;
-    height: 250px;
-    display: grid;
-    margin: .5%;
-    grid-template: 80% 20% / 100%;
-    justify-items:center;
-    border-radius: 5px;
-    transition: all 0.2s ease-in-out;
+  border: 3px darkkhaki double;
+  background-color: #026e6870;
+  width: 275px;
+  height: 250px;
+  display: grid;
+  margin: 0.5%;
+  grid-template: 80% 20% / 100%;
+  justify-items: center;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
 .header {
-    display: grid;
-    border: 3px darkkhaki double;
-    background-color: #026e6870;
-    border-radius: 5px;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 50% 50%;
-    color: rgb(0, 0, 0);
+  display: grid;
+  border: 3px darkkhaki double;
+  background-color: #026e6870;
+  border-radius: 5px;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 50% 50%;
+  color: rgb(0, 0, 0);
 }
 
 .instructions {
-    margin-top: 1%;
-    display: flex;
-    font-size: small;
-    margin-left: 2%;
-    margin-bottom: 3%;
+  margin-top: 1%;
+  display: flex;
+  font-size: small;
+  margin-left: 2%;
+  margin-bottom: 3%;
 }
 
-h1, h4 {
-    margin-top: 0;
-    margin-bottom: 2%;
-    font-family: Papyrus, "Marker Felt", Copperplate;
-    width: fit-content;
+h1,
+h4 {
+  margin-top: 0;
+  margin-bottom: 2%;
+  font-family: Papyrus, 'Marker Felt', Copperplate;
+  width: fit-content;
 }
-h2{
-    font-family: Papyrus, "Marker Felt", Copperplate;
-    margin: 0;
+h2 {
+  font-family: Papyrus, 'Marker Felt', Copperplate;
+  margin: 0;
 }
 
 .title {
-    font-size: x-large;
-    margin-left: 2%;
-    margin-bottom: 0;
+  font-size: x-large;
+  margin-left: 2%;
+  margin-bottom: 0;
 }
 
-.card>h2 {
-    font-family: Herculanum, "Eras Demi ITC", sans-serif;
-    font-weight: bold;
-    font-size: xx-large;
-    color: whitesmoke;
-    margin-top: -3%;
+.card > h2 {
+  font-family: Herculanum, 'Eras Demi ITC', sans-serif;
+  font-weight: bold;
+  font-size: xx-large;
+  color: whitesmoke;
+  margin-top: -3%;
 }
 
-   body {
-    margin: 0;
-   }
+body {
+  margin: 0;
+}
 
 .bg {
-        display: grid;
-            grid-template: 13% 87%/ 100%;
-            padding-left: 3%;
-            padding-right: 3%;
-            row-gap: .5%;
-            padding-top: 1.5%;
-            justify-content: center;
+  display: grid;
+  grid-template: 13% 87%/ 100%;
+  padding-left: 3%;
+  padding-right: 3%;
+  row-gap: 0.5%;
+  padding-top: 1.5%;
+  justify-content: center;
+  background-image: url('./images/background.jpeg');
 }
 
-.card:hover{
-    cursor: pointer;
-    box-shadow: 0 0 45px whitesmoke;
+.card:hover {
+  cursor: pointer;
+  box-shadow: 0 0 45px whitesmoke;
 }
-
